--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mainetownhalls",
+  "name": "maine-town-halls",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.9",
     "@fortawesome/fontawesome-free-solid": "^5.0.9",
     "@fortawesome/react-fontawesome": "0.0.18",
-    "antd": "^3.18.1",
+    "antd": "^3.19.7",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -20,11 +20,9 @@
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "history": "4.7.2",
-    "html-webpack-plugin": "^2.30.1",
     "lodash": "^4.17.11",
     "moment": "^2.19.3",
     "node-sass": "^4.12.0",
-    "pram": "^2.0.0-alpha.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -35,15 +33,14 @@
     "reselect": "^3.0.1",
     "resolve-url-loader": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "spherical-geometry-js": "^1.0.1",
+    "spherical-geometry-js": "^1.4.0",
     "style-loader": "^0.20.1",
-    "superagent": "^3.8.1",
-    "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
+    "superagent": "^3.8.1"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.2",
     "eslint": "^4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
@@ -51,8 +48,17 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-react-native": "^3.2.0",
     "gh-pages": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "less-vars-to-js": "^1.3.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "react-fontawesome": "^1.6.1",
-    "url-loader": "^0.6.2"
+    "terser-webpack-plugin": "^1.4.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
   },
   "scripts": {
     "predeploy": "npm run build",
