--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^6.3.4",
     "history": "4.7.2",
     "lodash": "^4.17.11",
     "moment": "^2.19.3",
