--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-react-native": "^3.2.0",
+    "file-loader": "^4.1.0",
     "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "less-vars-to-js": "^1.3.0",
